# cam_bot

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md
back/: Cargo.toml  Makefile.toml
back/src/: front.rs  lib.rs
back/src/api/: commands.rs  mod.rs  twitch.rs
back/src/db/: commands.rs  mod.rs  schema.rs  twitch.rs
back/src/error/: mod.rs  reqwest.rs  rocket.rs
back/src/twitch/: mod.rs
backend/: Cargo.toml
backend/src/: frontend.rs  lib.rs
backend/src/error/: db.rs
config/: cam_bot.toml
config/cert/: generate_certificate.sh
doc/: project_layout.dot
front/: Cargo.toml  Makefile.toml
front/scss/: cam_bot.scss  color.scss
front/src/: footer.rs  header.rs  left_menu.rs  lib.rs  twitch.rs
front/src/twitch/: scope.rs
frontend/: Cargo.toml  index.html
migrations/2021-11-29-211547_test/: down.sql  up.sql
src/: lib.rs
src/db/: commands.rs  mod.rs  schema.rs  timers.rs
src/error/: backend.rs  mod.rs  server.rs
src/server/: commands.rs  mod.rs  timers.rs
templates/: index.html.tera
