[package]
name = "cam_bot"
description = "A twitch bot"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"

homepage = "https://github.com/natir/cam_bot"
repository = "https://github.com/natir/cam_bot"
documentation = "https://natir.github.io/cam_bot/cam_bot"

readme = "Readme.md"
license-file = "LICENSE"

keywords = ["bot", "twitch"]

publish = false # this crate haven't his place in crates.io


[workspace]
members = ["backend", "frontend"]
default-members = ["backend"]


[dependencies]


[profile.release]
#debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false