[package]
name = "back"
description = "Backend of cam_bot twitch bot"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"

publish = false # this crate haven't his place in crates.io


[dependencies]
# db
diesel               = { version = "1", features = ["sqlite", "chrono"] }
diesel_migrations    = "1"
chrono               = { version = "0.4", features = ["serde"] }

# irc
irc                  = "0.15"

# obs

# server
rocket               = { version = "0.5.0-rc.1", features = ["json", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }

# twitch
reqwest              = { version = "0.11", features = ["json", "blocking"] }

# read configuration
figment              = { version = "0.10", features = ["toml", "env"] }

# error
thiserror            = "1"

# logging
log                  = "0.4"