[package]
name = "front"
description = "Frontend of cam_bot twitch bot"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"

publish = false


[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
yew          = { git = "https://github.com/yewstack/yew", rev = "yew-v0.19.1" }
wasm-bindgen = "0.2"