[package]
name = "front"
description = "Frontend of cam_bot twitch bot"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"

publish = false


[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
# yew
yew          = "0.19"
yew-router   = "0.16"

reqwest      = { version = "0.11", features = ["json", "blocking"] }
serde        = "1"
wasm-bindgen-futures = "0.4"

# other
wasm-bindgen = { version = "0.2" }
wasm-logger  = "0.2.0"
web-sys      = { version = "0.3", features = ["Request", "RequestInit", "RequestMode"] }

# logging
log          = "0.4"